Fixed a bug on style, related to overflow, that would make the main be bigger if you open the questions

--- a/faq-accordion-card-main/styles.css
+++ b/faq-accordion-card-main/styles.css
@@ -19,7 +19,7 @@ body {
     background: linear-gradient(var(--soft-violet), var(--soft-blue));
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
     font-size: 13px;
     font-weight: 400;
@@ -28,30 +28,27 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    justify-content: end;
     width: 330px;
-    min-height: 550px;
+    height: 530px;
     border-radius: 1.5rem;
     position: relative;
-    margin-bottom: 20%;
     box-shadow: 0px 20px 50px 0px #00000070;
     background: #fff;
+    margin-top: 65px;
+    padding-top: 120px;
+    box-sizing: border-box;
 }
 
 .content-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
     padding: 1.2rem;
-    padding-bottom: 3.2rem;
-    justify-content: center;
+    overflow: scroll;
 }
 
 .image-container {
     position: absolute;
-    width: 15rem;
-    top: -15%;
-    left: 14%;
+    width: 240px;
+    top: -110px;
+    left: 45px;
 }
 
 .online {
@@ -75,6 +72,7 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-top: 2rem;
 }
 
 .line {
